# spanner_bazel_repro

./: .bazelrc  BUILD  MODULE.bazel  README.md  go.mod  go.sum
spanner/: BUILD.bazel  spanner.go
