module(
    name = "spanner_bazel_repro",
    version = "1.0",
)

bazel_dep(name = "gazelle", version = "0.39.0", repo_name = "bazel_gazelle")
bazel_dep(name = "googleapis", version = "0.0.0-20240326-1c8d509c5")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "protobuf", version = "23.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "io_bazel_rules_go")

# rules_go
# ========

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.1")
use_repo(
    go_sdk,
    "go_toolchains",
    "io_bazel_rules_nogo",
)

# Update Go deps with:
#     bazelisk run @io_bazel_rules_go//go -- mod tidy -v
go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_google_cloud_go_spanner",
)
